--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "@angular/compiler": "~10.2.0",
     "@angular/core": "~10.2.0",
     "@angular/forms": "~10.2.0",
+    "@angular/localize": "~10.2.0",
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "bootstrap": "^4.5.0",
+    "dotenv": "^8.2.0",
     "rxjs": "~6.6.0",
+    "square-connect": "^4.20200923.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
