--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@angular/router": "~10.2.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
-    "dotenv": "^8.2.0",
     "rxjs": "~6.6.0",
     "square-connect": "^4.20200923.4",
     "tslib": "^2.0.0",
@@ -47,5 +46,10 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
