--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rxjs": "~6.6.0",
     "square-connect": "^4.20200923.4",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
