--- a/package.json
+++ b/package.json
@@ -12,23 +12,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.2.0",
+    "@angular/cdk": "^10.2.6",
     "@angular/common": "~10.2.0",
     "@angular/compiler": "~10.2.0",
     "@angular/core": "~10.2.0",
     "@angular/fire": "^6.0.3",
     "@angular/forms": "~10.2.0",
     "@angular/localize": "~10.2.0",
+    "@angular/material": "^10.2.6",
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
+    "firebase": "^7.13.1",
     "rxjs": "~6.6.0",
     "square-connect": "^4.20200923.4",
     "tslib": "^2.0.0",
     "uuid": "^8.3.1",
-    "zone.js": "~0.10.2",
-    "firebase": "^7.13.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1002.0",
